Add DaigtPreprocessingResults info

--- a/daigt_dataset.ipynb
+++ b/daigt_dataset.ipynb
@@ -72,7 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessing_results = DaigtPreprocessing(settings).preprocess(dataset)"
+    "preprocessing_results = DaigtPreprocessing(settings).preprocess(dataset)\n",
+    "preprocessing_results.info()"
    ]
   }
  ],
