--- a/daigt_dataset.ipynb
+++ b/daigt_dataset.ipynb
@@ -104,110 +104,110 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>human</td>\n",
-       "      <td>16534054</td>\n",
-       "      <td>1132449</td>\n",
-       "      <td>571895</td>\n",
-       "      <td>11498133</td>\n",
-       "      <td>12626085</td>\n",
+       "      <td>13541</td>\n",
+       "      <td>982</td>\n",
+       "      <td>501</td>\n",
+       "      <td>9360</td>\n",
+       "      <td>10326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>mistral</td>\n",
-       "      <td>10679300</td>\n",
-       "      <td>1303559</td>\n",
-       "      <td>285237</td>\n",
-       "      <td>6069118</td>\n",
-       "      <td>6776800</td>\n",
+       "      <td>15878</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>427</td>\n",
+       "      <td>9150</td>\n",
+       "      <td>10268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>llama</td>\n",
-       "      <td>8925648</td>\n",
-       "      <td>901248</td>\n",
-       "      <td>295540</td>\n",
-       "      <td>5576315</td>\n",
-       "      <td>6250480</td>\n",
+       "      <td>14343</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>510</td>\n",
+       "      <td>9136</td>\n",
+       "      <td>10217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>gpt</td>\n",
-       "      <td>2102310</td>\n",
-       "      <td>245189</td>\n",
-       "      <td>61041</td>\n",
-       "      <td>1220047</td>\n",
-       "      <td>1368602</td>\n",
+       "      <td>15901</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>453</td>\n",
+       "      <td>9172</td>\n",
+       "      <td>10260</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>claude</td>\n",
-       "      <td>1130777</td>\n",
-       "      <td>140499</td>\n",
-       "      <td>34997</td>\n",
-       "      <td>621079</td>\n",
-       "      <td>686557</td>\n",
+       "      <td>16900</td>\n",
+       "      <td>2154</td>\n",
+       "      <td>512</td>\n",
+       "      <td>9196</td>\n",
+       "      <td>10119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>falcon</td>\n",
-       "      <td>3025621</td>\n",
-       "      <td>377694</td>\n",
-       "      <td>84050</td>\n",
-       "      <td>1708179</td>\n",
-       "      <td>1909399</td>\n",
+       "      <td>16472</td>\n",
+       "      <td>2113</td>\n",
+       "      <td>429</td>\n",
+       "      <td>9226</td>\n",
+       "      <td>10266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>palm</td>\n",
-       "      <td>1081158</td>\n",
-       "      <td>109939</td>\n",
-       "      <td>42875</td>\n",
-       "      <td>678377</td>\n",
-       "      <td>771497</td>\n",
+       "      <td>14543</td>\n",
+       "      <td>1536</td>\n",
+       "      <td>527</td>\n",
+       "      <td>8989</td>\n",
+       "      <td>10184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>cohere</td>\n",
-       "      <td>182736</td>\n",
-       "      <td>19642</td>\n",
-       "      <td>5791</td>\n",
-       "      <td>112957</td>\n",
-       "      <td>125297</td>\n",
+       "      <td>14837</td>\n",
+       "      <td>1565</td>\n",
+       "      <td>464</td>\n",
+       "      <td>9221</td>\n",
+       "      <td>10242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>ada</td>\n",
-       "      <td>236731</td>\n",
-       "      <td>21785</td>\n",
-       "      <td>8902</td>\n",
-       "      <td>154673</td>\n",
-       "      <td>170596</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1190</td>\n",
+       "      <td>573</td>\n",
+       "      <td>9290</td>\n",
+       "      <td>10275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>babbage</td>\n",
-       "      <td>212813</td>\n",
-       "      <td>20728</td>\n",
-       "      <td>7751</td>\n",
-       "      <td>136981</td>\n",
-       "      <td>150379</td>\n",
+       "      <td>14469</td>\n",
+       "      <td>1430</td>\n",
+       "      <td>547</td>\n",
+       "      <td>9387</td>\n",
+       "      <td>10269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>curie</td>\n",
-       "      <td>245991</td>\n",
-       "      <td>24193</td>\n",
-       "      <td>9696</td>\n",
-       "      <td>157883</td>\n",
-       "      <td>175347</td>\n",
+       "      <td>14364</td>\n",
+       "      <td>1437</td>\n",
+       "      <td>581</td>\n",
+       "      <td>9203</td>\n",
+       "      <td>10221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>davinci</td>\n",
-       "      <td>881346</td>\n",
-       "      <td>88326</td>\n",
-       "      <td>32198</td>\n",
-       "      <td>559496</td>\n",
-       "      <td>621339</td>\n",
+       "      <td>14555</td>\n",
+       "      <td>1452</td>\n",
+       "      <td>521</td>\n",
+       "      <td>9234</td>\n",
+       "      <td>10223</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -215,32 +215,32 @@
       ],
       "text/plain": [
        "   collection num_of_syllabes num_of_complex_words num_of_sentences  \\\n",
-       "0       human        16534054              1132449           571895   \n",
-       "1     mistral        10679300              1303559           285237   \n",
-       "2       llama         8925648               901248           295540   \n",
-       "3         gpt         2102310               245189            61041   \n",
-       "4      claude         1130777               140499            34997   \n",
-       "5      falcon         3025621               377694            84050   \n",
-       "6        palm         1081158               109939            42875   \n",
-       "7      cohere          182736                19642             5791   \n",
-       "8         ada          236731                21785             8902   \n",
-       "9     babbage          212813                20728             7751   \n",
-       "10      curie          245991                24193             9696   \n",
-       "11    davinci          881346                88326            32198   \n",
+       "0       human           13541                  982              501   \n",
+       "1     mistral           15878                 1904              427   \n",
+       "2       llama           14343                 1370              510   \n",
+       "3         gpt           15901                 1858              453   \n",
+       "4      claude           16900                 2154              512   \n",
+       "5      falcon           16472                 2113              429   \n",
+       "6        palm           14543                 1536              527   \n",
+       "7      cohere           14837                 1565              464   \n",
+       "8         ada           13995                 1190              573   \n",
+       "9     babbage           14469                 1430              547   \n",
+       "10      curie           14364                 1437              581   \n",
+       "11    davinci           14555                 1452              521   \n",
        "\n",
        "   num_of_words num_of_splits  \n",
-       "0      11498133      12626085  \n",
-       "1       6069118       6776800  \n",
-       "2       5576315       6250480  \n",
-       "3       1220047       1368602  \n",
-       "4        621079        686557  \n",
-       "5       1708179       1909399  \n",
-       "6        678377        771497  \n",
-       "7        112957        125297  \n",
-       "8        154673        170596  \n",
-       "9        136981        150379  \n",
-       "10       157883        175347  \n",
-       "11       559496        621339  "
+       "0          9360         10326  \n",
+       "1          9150         10268  \n",
+       "2          9136         10217  \n",
+       "3          9172         10260  \n",
+       "4          9196         10119  \n",
+       "5          9226         10266  \n",
+       "6          8989         10184  \n",
+       "7          9221         10242  \n",
+       "8          9290         10275  \n",
+       "9          9387         10269  \n",
+       "10         9203         10221  \n",
+       "11         9234         10223  "
       ]
      },
      "execution_count": 6,
@@ -251,6 +251,15 @@
    "source": [
     "preprocessing_results = DaigtPreprocessing(settings).preprocess(dataset)\n",
     "preprocessing_results.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_analysis_results = DaigtMetricsAnalysis().analyze(preprocessing_results)"
    ]
   }
  ],
