--- a/writing_style_analysis.ipynb
+++ b/writing_style_analysis.ipynb
@@ -841,6 +841,15 @@
     "preprocessing_results = WritingStylePreprocessing(settings).preprocess(dataset)\n",
     "preprocessing_results.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_analysis_results = WritingStyleMetricsAnalysis().analyze(preprocessing_results)"
+   ]
   }
  ],
  "metadata": {
