--- a/daigt_dataset.ipynb
+++ b/daigt_dataset.ipynb
@@ -422,7 +422,7 @@
     "with open(writing_style_analysis_dump_filename, 'rb') as file:\n",
     "    dump_dict = dill.load(file)\n",
     "\n",
-    "feature_extractor = dump_dict['feature_extractor']"
+    "feature_extractor: FeatureExtractor = dump_dict['feature_extractor']"
    ]
   },
   {
