--- a/daigt_dataset.ipynb
+++ b/daigt_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,12 +422,13 @@
     "with open(writing_style_analysis_dump_filename, 'rb') as file:\n",
     "    dump_dict = dill.load(file)\n",
     "\n",
-    "feature_extractor: FeatureExtractor = dump_dict['feature_extractor']"
+    "writing_style_feature_extractor: FeatureExtractor = dump_dict['feature_extractor']\n",
+    "writing_style_pca_analysis_results: FeatureExtractor = dump_dict['pca_analysis_results']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +648,7 @@
        "11         9234         10223  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -688,44 +689,58 @@
        " 'herdans_c',\n",
        " 'maas',\n",
        " 'simpsons_index',\n",
-       " '\"',\n",
-       " '*',\n",
        " ';',\n",
+       " '\"',\n",
+       " \"'\",\n",
+       " '*',\n",
+       " '-',\n",
        " ',',\n",
        " '.',\n",
-       " '-',\n",
-       " \"'\",\n",
-       " 'he',\n",
-       " 'the',\n",
-       " 'with',\n",
-       " 'a',\n",
-       " 'she',\n",
-       " 'its',\n",
-       " 'her',\n",
-       " 'and',\n",
-       " 'his',\n",
-       " 'our',\n",
-       " 'in',\n",
-       " 'to',\n",
-       " 'you',\n",
-       " 'their',\n",
-       " 'my',\n",
-       " 'was',\n",
-       " 'is',\n",
-       " 'said',\n",
        " 'it',\n",
+       " 'my',\n",
+       " 'its',\n",
+       " 'was',\n",
        " 'as',\n",
+       " 'she',\n",
+       " 'with',\n",
        " 'that',\n",
-       " 'of']"
+       " 'and',\n",
+       " 'a',\n",
+       " 'is',\n",
+       " 'you',\n",
+       " 'our',\n",
+       " 'his',\n",
+       " 'of',\n",
+       " 'he',\n",
+       " 'in',\n",
+       " 'their',\n",
+       " 'said',\n",
+       " 'the',\n",
+       " 'to',\n",
+       " 'her']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "feature_extractor.get_feature_names()"
+    "writing_style_feature_extractor.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca_analysis = DaigtPCAAnalysis(\n",
+    "    settings=settings,\n",
+    "    feature_extractor=writing_style_feature_extractor,\n",
+    "    writing_style_pca_analysis_results=writing_style_pca_analysis_results\n",
+    ")\n",
+    "pca_analysis_results = pca_analysis.analyze(metrics_analysis_results)"
    ]
   }
  ],
