Dump daigt_dataset.ipynb

--- a/daigt_dataset.ipynb
+++ b/daigt_dataset.ipynb
@@ -417,7 +417,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dump_filename = 'res/sessions/daigt_dataset.db'\n",
     "writing_style_analysis_dump_filename = 'res/sessions/writing_style_analysis.db'\n",
+    "\n",
     "dump_dict = None\n",
     "with open(writing_style_analysis_dump_filename, 'rb') as file:\n",
     "    dump_dict = dill.load(file)\n",
@@ -14360,6 +14362,28 @@
    ],
    "source": [
     "DaigtPCAVisualization(pca_results).visualize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump_filename = 'res/sessions/daigt_dataset.db'\n",
+    "if os.path.exists(dump_filename):\n",
+    "    os.remove(dump_filename)\n",
+    "with open(dump_filename, 'wb') as file:\n",
+    "    dill.dump(\n",
+    "        obj={\n",
+    "            \"dataset\": dataset,\n",
+    "            \"preprocessing_results\": preprocessing_results,\n",
+    "            \"metrics_analysis_results\": metrics_analysis_results,\n",
+    "            \"feature_extractor\": writing_style_feature_extractor,\n",
+    "            \"pca_results\": pca_results,\n",
+    "        },  \n",
+    "        file=file\n",
+    "    )"
    ]
   }
  ],
