--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -1272,35 +1272,45 @@
        " 'herdans_c',\n",
        " 'maas',\n",
        " 'simpsons_index',\n",
-       " ';',\n",
-       " '\"',\n",
-       " \"'\",\n",
-       " '*',\n",
+       " '/',\n",
+       " '#',\n",
        " '-',\n",
+       " ';',\n",
+       " '[',\n",
+       " '(',\n",
+       " ':',\n",
+       " '\"',\n",
+       " '*',\n",
+       " '_',\n",
+       " \"'\",\n",
+       " '!',\n",
+       " '?',\n",
        " ',',\n",
        " '.',\n",
-       " 'it',\n",
-       " 'my',\n",
-       " 'its',\n",
-       " 'was',\n",
-       " 'as',\n",
-       " 'she',\n",
-       " 'with',\n",
-       " 'that',\n",
-       " 'and',\n",
-       " 'a',\n",
-       " 'is',\n",
-       " 'you',\n",
-       " 'our',\n",
+       " '%',\n",
+       " ')',\n",
        " 'his',\n",
+       " 'it',\n",
+       " 'was',\n",
+       " 'our',\n",
+       " 'her',\n",
        " 'of',\n",
-       " 'he',\n",
-       " 'in',\n",
-       " 'their',\n",
-       " 'said',\n",
        " 'the',\n",
+       " 'said',\n",
+       " 'he',\n",
+       " 'their',\n",
+       " 'and',\n",
+       " 'its',\n",
+       " 'she',\n",
+       " 'my',\n",
+       " 'in',\n",
+       " 'you',\n",
+       " 'with',\n",
+       " 'a',\n",
+       " 'as',\n",
        " 'to',\n",
-       " 'her']"
+       " 'that',\n",
+       " 'is']"
       ]
      },
      "execution_count": 9,
@@ -18207,7 +18217,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12b84135160>"
+       "<IPython.lib.display.IFrame at 0x16a8d7879e0>"
       ]
      },
      "metadata": {},
@@ -18220,7 +18230,35 @@
       "c:\\Projects\\Thesis\\src\\analysis\\metrics\\writing_style\\visualization\\writing_style_metrics_analysis_visualization.py:171: RuntimeWarning:\n",
       "\n",
       "invalid value encountered in scalar divide\n",
-      "\n"
+      "\n",
+      "[2024-10-30 23:05:20,276] ERROR in app: Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 1473, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 882, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 880, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 865, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\dash.py\", line 1376, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 514, in add_context\n",
+      "    raise err\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 503, in add_context\n",
+      "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
+      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 43, in _invoke_callback\n",
+      "    return func(*args, **kwargs)  # %% callback invoked %%\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\src\\analysis\\metrics\\writing_style\\visualization\\writing_style_metrics_analysis_visualization.py\", line 147, in update_relative_bars\n",
+      "    else AnalysisVisualization.COLORS[\"positive\"]\n",
+      "        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^\n",
+      "TypeError: list indices must be integers or slices, not str\n"
      ]
     }
    ],
@@ -18230,7 +18268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18242,7 +18280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -18256,30 +18294,30 @@
          "marker": {
           "color": "skyblue"
          },
-         "name": "Top Features for PC1[0.34]",
+         "name": "Top Features for PC1[0.29]",
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.2393850363720443,
-          0.2385017727559374,
-          0.22917734146823762,
-          0.22677118290485154,
-          0.22618510025173852,
-          0.2260490510694335,
-          0.22603285516057658,
-          0.2248324153074017,
-          0.21405750818073177,
-          0.20365285063401847
+          0.22866375347615517,
+          0.22836417848689333,
+          0.21917796479976526,
+          0.21681749741442385,
+          0.21616388714505738,
+          0.21593311201331258,
+          0.21592279981777723,
+          0.21394795088420193,
+          0.2050279088116419,
+          0.20041326822371122
          ],
          "xaxis": "x",
          "y": [
-          "flesch_reading_ease",
           "of",
+          "flesch_reading_ease",
           "yules_characteristic_k",
           "simpsons_index",
           "flesch_kincaid_grade_level",
-          "gunning_fog_index",
           "the",
+          "gunning_fog_index",
           "average_syllables_per_word",
           "average_word_length",
           "said"
@@ -18290,20 +18328,20 @@
          "marker": {
           "color": "skyblue"
          },
-         "name": "Top Features for PC2[0.11]",
+         "name": "Top Features for PC2[0.09]",
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.3097482066087704,
-          0.3063264390325641,
-          0.294783782507497,
-          0.2870936315240489,
-          0.26013173882187707,
-          0.25331210843252466,
-          0.2495083909134942,
-          0.21805057765435695,
-          0.2179921915077798,
-          0.17877016450189329
+          0.3193324664128446,
+          0.29260509585517036,
+          0.27978621277435883,
+          0.26327571235860847,
+          0.2584187872918645,
+          0.24019709512703102,
+          0.22488090970145833,
+          0.21572403275271018,
+          0.20610514188397203,
+          0.20580189190728757
          ],
          "xaxis": "x2",
          "y": [
@@ -18312,11 +18350,11 @@
           "and",
           "to",
           "in",
-          "average_sentence_length",
           "as",
-          "flesch_kincaid_grade_level",
+          "average_sentence_length",
+          "unique_word_count",
           "gunning_fog_index",
-          "."
+          "flesch_kincaid_grade_level"
          ],
          "yaxis": "y2"
         }
@@ -18328,7 +18366,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Top Features for PC1[0.34]",
+          "text": "Top Features for PC1[0.29]",
           "x": 0.1875,
           "xanchor": "center",
           "xref": "paper",
@@ -18341,7 +18379,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Top Features for PC2[0.11]",
+          "text": "Top Features for PC2[0.09]",
           "x": 0.8125,
           "xanchor": "center",
           "xref": "paper",
@@ -19177,8 +19215,8 @@
           0.375
          ],
          "range": [
-          0.20365285063401847,
-          0.2393850363720443
+          0.20041326822371122,
+          0.22866375347615517
          ],
          "title": {
           "text": "Importance"
@@ -19191,8 +19229,8 @@
           1
          ],
          "range": [
-          0.17877016450189329,
-          0.3097482066087704
+          0.20580189190728757,
+          0.3193324664128446
          ]
         },
         "yaxis": {
@@ -19228,7 +19266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -19246,7 +19284,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12bfd771b50>"
+       "<IPython.lib.display.IFrame at 0x16a88cf1730>"
       ]
      },
      "metadata": {},
@@ -19259,7 +19297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
