--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -422,15 +422,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dump_session_filepath = 'res/sessions/writing_style_dataset.db'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -19297,13 +19288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists(dump_session_filepath):\n",
-    "    os.remove(dump_session_filepath)\n",
-    "with open(dump_session_filepath, 'wb') as file:\n",
+    "if os.path.exists(settings.paths.ws_dataset_dump_file):\n",
+    "    os.remove(settings.paths.ws_dataset_dump_file)\n",
+    "with open(settings.paths.ws_dataset_dump_file, 'wb') as file:\n",
     "    dill.dump(\n",
     "        obj={\n",
     "            \"preprocessing_results\": preprocessing_results,\n",
