--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -19297,6 +19297,7 @@
     "with open(settings.paths.ws_dataset_dump_file, 'wb') as file:\n",
     "    dill.dump(\n",
     "        obj={\n",
+    "            \"dataset\": dataset,\n",
     "            \"preprocessing_results\": preprocessing_results,\n",
     "            \"metrics_analysis_results\": metrics_analysis_results,\n",
     "            \"feature_extractor\": feature_extractor,\n",
