Improve FeatureExtractor performance

--- a/7_daigt_all_features_classification.ipynb
+++ b/7_daigt_all_features_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,16 +43,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16:23:29] Step 1\n",
+      "[16:23:29] Step 2\n",
+      "[16:23:30] Step 3\n",
+      "[16:23:30] Step 4\n",
+      "[16:23:30] Step 5\n",
+      "[16:23:30] Step 6\n",
+      "[16:23:30] Step 7\n",
+      "[16:23:33] Step 8\n",
+      "[16:23:33] Step 9\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.65"
+       "0.9368169646088153"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
