Use books domain model

--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1222,7 @@
        "59                22811             7040       174680        200655  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1263,48 +1263,48 @@
        " 'herdans_c',\n",
        " 'maas',\n",
        " 'simpsons_index',\n",
-       " '/',\n",
-       " '#',\n",
-       " '-',\n",
-       " ';',\n",
-       " '[',\n",
-       " '(',\n",
-       " ':',\n",
-       " '\"',\n",
-       " '*',\n",
-       " '_',\n",
-       " \"'\",\n",
        " '!',\n",
+       " '*',\n",
+       " ')',\n",
+       " '%',\n",
+       " '\"',\n",
+       " ':',\n",
+       " ';',\n",
+       " '-',\n",
+       " \"'\",\n",
        " '?',\n",
        " ',',\n",
+       " '(',\n",
+       " '#',\n",
        " '.',\n",
-       " '%',\n",
-       " ')',\n",
+       " '[',\n",
+       " '_',\n",
+       " '/',\n",
+       " 'the',\n",
+       " 'was',\n",
+       " 'as',\n",
        " 'his',\n",
        " 'it',\n",
-       " 'was',\n",
-       " 'our',\n",
-       " 'her',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'said',\n",
-       " 'he',\n",
-       " 'their',\n",
-       " 'and',\n",
-       " 'its',\n",
-       " 'she',\n",
-       " 'my',\n",
        " 'in',\n",
-       " 'you',\n",
        " 'with',\n",
        " 'a',\n",
-       " 'as',\n",
+       " 'their',\n",
+       " 'her',\n",
+       " 'and',\n",
+       " 'is',\n",
+       " 'its',\n",
        " 'to',\n",
+       " 'of',\n",
+       " 'our',\n",
+       " 'he',\n",
+       " 'said',\n",
+       " 'she',\n",
        " 'that',\n",
-       " 'is']"
+       " 'my',\n",
+       " 'you']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -18190,7 +18190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -18208,7 +18208,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x16a8d7879e0>"
+       "<IPython.lib.display.IFrame at 0x152fdbe41d0>"
       ]
      },
      "metadata": {},
@@ -18221,35 +18221,7 @@
       "c:\\Projects\\Thesis\\src\\analysis\\metrics\\writing_style\\visualization\\writing_style_metrics_analysis_visualization.py:171: RuntimeWarning:\n",
       "\n",
       "invalid value encountered in scalar divide\n",
-      "\n",
-      "[2024-10-30 23:05:20,276] ERROR in app: Exception on /_dash-update-component [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 1473, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 882, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 880, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 865, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\dash.py\", line 1376, in dispatch\n",
-      "    ctx.run(\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 514, in add_context\n",
-      "    raise err\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 503, in add_context\n",
-      "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
-      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 43, in _invoke_callback\n",
-      "    return func(*args, **kwargs)  # %% callback invoked %%\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Projects\\Thesis\\src\\analysis\\metrics\\writing_style\\visualization\\writing_style_metrics_analysis_visualization.py\", line 147, in update_relative_bars\n",
-      "    else AnalysisVisualization.COLORS[\"positive\"]\n",
-      "        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^\n",
-      "TypeError: list indices must be integers or slices, not str\n"
+      "\n"
      ]
     }
    ],
@@ -18259,7 +18231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18271,7 +18243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -18289,16 +18261,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.22866375347615517,
-          0.22836417848689333,
-          0.21917796479976526,
-          0.21681749741442385,
-          0.21616388714505738,
-          0.21593311201331258,
-          0.21592279981777723,
-          0.21394795088420193,
-          0.2050279088116419,
-          0.20041326822371122
+          0.22866375347615525,
+          0.22836417848689344,
+          0.21917796479976542,
+          0.21681749741442397,
+          0.2161638871450574,
+          0.21593311201331264,
+          0.21592279981777732,
+          0.213947950884202,
+          0.20502790881164196,
+          0.20041326822371125
          ],
          "xaxis": "x",
          "y": [
@@ -18323,16 +18295,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.3193324664128446,
-          0.29260509585517036,
-          0.27978621277435883,
-          0.26327571235860847,
-          0.2584187872918645,
-          0.24019709512703102,
-          0.22488090970145833,
-          0.21572403275271018,
-          0.20610514188397203,
-          0.20580189190728757
+          0.31933246641284446,
+          0.29260509585517025,
+          0.2797862127743586,
+          0.26327571235860825,
+          0.25841878729186435,
+          0.24019709512703089,
+          0.22488090970145824,
+          0.21572403275270952,
+          0.20610514188397205,
+          0.20580189190728748
          ],
          "xaxis": "x2",
          "y": [
@@ -19206,8 +19178,8 @@
           0.375
          ],
          "range": [
-          0.20041326822371122,
-          0.22866375347615517
+          0.20041326822371125,
+          0.22866375347615525
          ],
          "title": {
           "text": "Importance"
@@ -19220,8 +19192,8 @@
           1
          ],
          "range": [
-          0.20580189190728757,
-          0.3193324664128446
+          0.20580189190728748,
+          0.31933246641284446
          ]
         },
         "yaxis": {
@@ -19257,7 +19229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -19275,7 +19247,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x16a88cf1730>"
+       "<IPython.lib.display.IFrame at 0x1528d9f51c0>"
       ]
      },
      "metadata": {},
@@ -19288,9 +19260,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Projects\\Thesis\\src\\analysis\\metrics\\writing_style\\visualization\\writing_style_metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "[2024-10-31 16:32:08,570] ERROR in app: Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 1473, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 882, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 880, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\flask\\app.py\", line 865, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\dash.py\", line 1376, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 514, in add_context\n",
+      "    raise err\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 503, in add_context\n",
+      "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
+      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\dash\\_callback.py\", line 43, in _invoke_callback\n",
+      "    return func(*args, **kwargs)  # %% callback invoked %%\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Projects\\Thesis\\src\\analysis\\metrics\\writing_style\\visualization\\writing_style_metrics_analysis_visualization.py\", line 147, in update_relative_bars\n",
+      "    else AnalysisVisualization.COLORS[\"positive\"]\n",
+      "        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^\n",
+      "TypeError: list indices must be integers or slices, not str\n"
+     ]
+    }
+   ],
    "source": [
     "if os.path.exists(settings.paths.ws_dataset_dump_file):\n",
     "    os.remove(settings.paths.ws_dataset_dump_file)\n",
