--- a/8_daigt_all_features_classification.ipynb
+++ b/8_daigt_all_features_classification.ipynb
@@ -31,7 +31,13 @@
     "    dump_dict = dill.load(file)\n",
     "\n",
     "metrics_analysis_results = dump_dict['metrics_analysis_results']\n",
-    "feature_extractor = dump_dict['feature_extractor']"
+    "feature_extractor = dump_dict['feature_extractor']\n",
+    "\n",
+    "dump_dict = None\n",
+    "with open(settings.paths.ws_all_features_classification_dump_file, 'rb') as file:\n",
+    "    dump_dict = dill.load(file)\n",
+    "\n",
+    "ws_xgboost_results = dump_dict['xgboost_results']"
    ]
   },
   {
@@ -47,24 +53,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[16:23:29] Step 1\n",
-      "[16:23:29] Step 2\n",
-      "[16:23:30] Step 3\n",
-      "[16:23:30] Step 4\n",
-      "[16:23:30] Step 5\n",
-      "[16:23:30] Step 6\n",
-      "[16:23:30] Step 7\n",
-      "[16:23:33] Step 8\n",
-      "[16:23:33] Step 9\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.9368169646088153"
+       "0.6653880115223716"
       ]
      },
      "execution_count": 4,
@@ -75,8 +66,9 @@
    "source": [
     "xgboost_results = DaigtAllFeaturesXGBoostClassification(\n",
     "    settings=settings, \n",
-    "    feature_extractor=feature_extractor\n",
-    ").fit_and_predict(metrics_analysis_results)\n",
+    "    feature_extractor=feature_extractor,\n",
+    "    ws_xgboost_results=ws_xgboost_results\n",
+    ").predict(metrics_analysis_results)\n",
     "xgboost_results.all_chunks_binary_classification.accuracy"
    ]
   }
