--- a/5_writing_style_all_features_classification.ipynb
+++ b/5_writing_style_all_features_classification.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9979166666666667"
+       "1.0"
       ]
      },
      "execution_count": 4,
@@ -63,6 +63,23 @@
     "    feature_extractor=feature_extractor\n",
     ").fit_and_predict(metrics_analysis_results)\n",
     "xgboost_results.all_chunks_binary_classification.accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(settings.paths.ws_all_features_classification_dump_file):\n",
+    "    os.remove(settings.paths.ws_all_features_classification_dump_file)\n",
+    "with open(settings.paths.ws_all_features_classification_dump_file, 'wb') as file:\n",
+    "    dill.dump(\n",
+    "        obj={\n",
+    "            \"xgboost_results\": xgboost_results\n",
+    "        },  \n",
+    "        file=file\n",
+    "    )"
    ]
   }
  ],
