Finish entopy sequence implementation

--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -522,21 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "entropy_analysis = EntropyAnalysis(\n",
     "    settings=settings,\n",
@@ -581,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,6 +582,7 @@
     "            \"preprocessing_results\": preprocessing_results,\n",
     "            \"metrics_analysis_results\": metrics_analysis_results,\n",
     "            \"feature_extractor\": feature_extractor,\n",
+    "            \"entropy_analysis_results\": entropy_analysis_results,\n",
     "            \"pca_analysis_results\": pca_analysis_results,\n",
     "        },  \n",
     "        file=file\n",
