--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -434,6 +434,7 @@
     "preprocessing_results = dump_dict['preprocessing_results']\n",
     "metrics_analysis_results = dump_dict['metrics_analysis_results']\n",
     "feature_extractor = dump_dict['feature_extractor']\n",
+    "entropy_analysis_results = dump_dict['entropy_analysis_results']\n",
     "pca_analysis_results = dump_dict['pca_analysis_results']"
    ]
   },
