--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -426,16 +426,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dump_dict = None\n",
-    "# with open(settings.paths.ws_dataset_dump_file, 'rb') as file:\n",
-    "#     dump_dict = dill.load(file)\n",
+    "dump_dict = None\n",
+    "with open(settings.paths.ws_dataset_dump_file, 'rb') as file:\n",
+    "    dump_dict = dill.load(file)\n",
     "    \n",
-    "# dataset = dump_dict['dataset']\n",
-    "# preprocessing_results = dump_dict['preprocessing_results']\n",
-    "# metrics_analysis_results = dump_dict['metrics_analysis_results']\n",
-    "# feature_extractor = dump_dict['feature_extractor']\n",
-    "# entropy_analysis_results = dump_dict['entropy_analysis_results']\n",
-    "# pca_analysis_results = dump_dict['pca_analysis_results']"
+    "dataset = dump_dict['dataset']\n",
+    "preprocessing_results = dump_dict['preprocessing_results']\n",
+    "metrics_analysis_results = dump_dict['metrics_analysis_results']\n",
+    "feature_extractor = dump_dict['feature_extractor']\n",
+    "entropy_analysis_results = dump_dict['entropy_analysis_results']\n",
+    "pca_analysis_results = dump_dict['pca_analysis_results']"
    ]
   },
   {
@@ -1282,45 +1282,45 @@
        " 'herdans_c',\n",
        " 'maas',\n",
        " 'simpsons_index',\n",
-       " '%',\n",
-       " '_',\n",
-       " '?',\n",
-       " '[',\n",
-       " \"'\",\n",
-       " ':',\n",
        " ',',\n",
-       " '(',\n",
-       " '/',\n",
        " ')',\n",
-       " ';',\n",
        " '!',\n",
-       " '#',\n",
+       " '(',\n",
        " '*',\n",
        " '-',\n",
        " '\"',\n",
+       " ';',\n",
+       " \"'\",\n",
        " '.',\n",
-       " 'was',\n",
-       " 'his',\n",
-       " 'in',\n",
-       " 'the',\n",
-       " 'its',\n",
-       " 'my',\n",
-       " 'to',\n",
-       " 'she',\n",
-       " 'said',\n",
-       " 'that',\n",
-       " 'it',\n",
-       " 'is',\n",
-       " 'and',\n",
-       " 'he',\n",
-       " 'with',\n",
-       " 'her',\n",
-       " 'our',\n",
+       " '?',\n",
+       " ':',\n",
+       " '#',\n",
+       " '_',\n",
+       " '[',\n",
+       " '%',\n",
+       " '/',\n",
        " 'you',\n",
+       " 'his',\n",
+       " 'my',\n",
+       " 'said',\n",
+       " 'our',\n",
        " 'their',\n",
+       " 'the',\n",
+       " 'her',\n",
+       " 'its',\n",
+       " 'as',\n",
        " 'of',\n",
+       " 'with',\n",
+       " 'to',\n",
+       " 'and',\n",
+       " 'it',\n",
+       " 'she',\n",
+       " 'he',\n",
+       " 'that',\n",
        " 'a',\n",
-       " 'as']"
+       " 'in',\n",
+       " 'was',\n",
+       " 'is']"
       ]
      },
      "execution_count": 9,
@@ -18227,7 +18227,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1e395dbf290>"
+       "<IPython.lib.display.IFrame at 0x206f607ecf0>"
       ]
      },
      "metadata": {},
@@ -18240,42 +18240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(settings.paths.ws_dataset_dump_file):\n",
-    "    os.remove(settings.paths.ws_dataset_dump_file)\n",
-    "with open(settings.paths.ws_dataset_dump_file, 'wb') as file:\n",
-    "    dill.dump(\n",
-    "        obj={\n",
-    "            \"dataset\": dataset,\n",
-    "            \"preprocessing_results\": preprocessing_results,\n",
-    "            \"metrics_analysis_results\": metrics_analysis_results,\n",
-    "            \"feature_extractor\": feature_extractor,\n",
-    "            \"entropy_analysis_results\": None,\n",
-    "            \"pca_analysis_results\": None,\n",
-    "        },  \n",
-    "        file=file\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.float64' object is not iterable",
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (400,50) (1,400) ",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "Cell \u001b[1;32mIn[13], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m entropy_analysis \u001b[38;5;241m=\u001b[39m WritingStyleEntropyAnalysis(\n\u001b[0;32m      2\u001b[0m     settings\u001b[38;5;241m=\u001b[39msettings,\n\u001b[0;32m      3\u001b[0m     feature_extractor\u001b[38;5;241m=\u001b[39mfeature_extractor,\n\u001b[0;32m      4\u001b[0m )\n\u001b[1;32m----> 5\u001b[0m entropy_analysis_results \u001b[38;5;241m=\u001b[39m \u001b[43mentropy_analysis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43manalyze\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpreprocessing_results\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpreprocessing_results\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmetrics_analysis_results\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmetrics_analysis_results\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Projects\\Thesis\\src\\analysis\\entropy\\writing_style\\writing_style_entropy_analysis.py:90\u001b[0m, in \u001b[0;36mWritingStyleEntropyAnalysis.analyze\u001b[1;34m(self, preprocessing_results, metrics_analysis_results)\u001b[0m\n\u001b[0;32m     82\u001b[0m entropy_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_chunks_features_entropies(\n\u001b[0;32m     83\u001b[0m     metrics_analysis_results\u001b[38;5;241m=\u001b[39mmetrics_analysis_results,\n\u001b[0;32m     84\u001b[0m     entropy_results\u001b[38;5;241m=\u001b[39mentropy_results\n\u001b[0;32m     85\u001b[0m )\n\u001b[0;32m     86\u001b[0m entropy_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_chunks_sequence_entropy(\n\u001b[0;32m     87\u001b[0m     preprocessing_results\u001b[38;5;241m=\u001b[39mpreprocessing_results,\n\u001b[0;32m     88\u001b[0m     entropy_results\u001b[38;5;241m=\u001b[39mentropy_results\n\u001b[0;32m     89\u001b[0m )\n\u001b[1;32m---> 90\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_calculate_entropies_average_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mentropy_results\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m entropy_results\n",
-      "File \u001b[1;32mc:\\Projects\\Thesis\\src\\analysis\\entropy\\writing_style\\writing_style_entropy_analysis.py:201\u001b[0m, in \u001b[0;36mWritingStyleEntropyAnalysis._calculate_entropies_average_data\u001b[1;34m(self, entropy_results)\u001b[0m\n\u001b[0;32m    199\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m collection_names \u001b[38;5;129;01min\u001b[39;00m entropy_results\u001b[38;5;241m.\u001b[39mcollection_names:\n\u001b[0;32m    200\u001b[0m     collection_entropies \u001b[38;5;241m=\u001b[39m entropy_results\u001b[38;5;241m.\u001b[39mcollections_entropies[collection_names] \n\u001b[1;32m--> 201\u001b[0m     collection_entropies_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfeature_entropy\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m    202\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m chunk_features_entropies \u001b[38;5;129;01min\u001b[39;00m collection_entropies\u001b[38;5;241m.\u001b[39mchunks_features_entropies\u001b[38;5;241m.\u001b[39mvalues()\n\u001b[0;32m    203\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m feature_entropy \u001b[38;5;129;01min\u001b[39;00m chunk_features_entropies\u001b[38;5;241m.\u001b[39mfeatures_entropy\u001b[38;5;241m.\u001b[39mvalues()\n\u001b[0;32m    204\u001b[0m     ]\n\u001b[0;32m    205\u001b[0m     collection_entropies_list \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(collection_entropies_list)\n\u001b[0;32m    207\u001b[0m     means \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(collection_entropies_list, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'numpy.float64' object is not iterable"
+      "File \u001b[1;32mc:\\Projects\\Thesis\\src\\analysis\\entropy\\writing_style\\writing_style_entropy_analysis.py:232\u001b[0m, in \u001b[0;36mWritingStyleEntropyAnalysis._calculate_entropies_average_data\u001b[1;34m(self, entropy_results)\u001b[0m\n\u001b[0;32m    224\u001b[0m sequence_std_error \u001b[38;5;241m=\u001b[39m sequence_std_dev \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(sequence_entropies\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m    226\u001b[0m collection_entropies\u001b[38;5;241m.\u001b[39maverage_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msequence\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m CollectionEntropyAverageData(\n\u001b[0;32m    227\u001b[0m     average\u001b[38;5;241m=\u001b[39msequence_average,\n\u001b[0;32m    228\u001b[0m     average_uncertainty\u001b[38;5;241m=\u001b[39msequence_std_error,\n\u001b[0;32m    229\u001b[0m     std\u001b[38;5;241m=\u001b[39msequence_std_dev\n\u001b[0;32m    230\u001b[0m )\n\u001b[1;32m--> 232\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mfeature_entropies\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43msequence_entropies\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m    233\u001b[0m averages \u001b[38;5;241m=\u001b[39m feature_averages \u001b[38;5;241m+\u001b[39m [sequence_average]\n\u001b[0;32m    234\u001b[0m std_errors \u001b[38;5;241m=\u001b[39m feature_std_errors \u001b[38;5;241m+\u001b[39m [sequence_std_error]\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (400,50) (1,400) "
      ]
     }
    ],
@@ -18294,8 +18272,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'entropy_analysis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mentropy_analysis\u001b[49m\u001b[38;5;241m.\u001b[39m_calculate_entropies_average_data(entropy_results\u001b[38;5;241m=\u001b[39mentropy_analysis_results)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'entropy_analysis' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "entropy_analysis = WritingStyleEntropyAnalysis(\n",
+    "    settings=settings,\n",
+    "    feature_extractor=feature_extractor,\n",
+    ")\n",
     "entropy_analysis._calculate_entropies_average_data(entropy_results=entropy_analysis_results)"
    ]
   },
@@ -18305,7 +18299,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WritingStyleEntropyAnalysisVisualization(entropy_analysis_results).visualize()"
+    "WritingStyleEntropyAnalysisVisualization(\n",
+    "    entropy_analysis_results=entropy_analysis_results,\n",
+    "    feature_extractor=feature_extractor\n",
+    ").visualize()"
    ]
   },
   {
